--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
 
     <div>
       <div class="row centered toolbar">
-        <!-- <input id="hex" type="text" placeholder="Enter hex color"> -->
         <input id="small" type="button" value="S" onclick="small()">
         <input id="normal" type="button" value="M" onclick="normal()">
         <input id="large" type="button" value="L" onclick="large()">
         <input id="eraser" type="button" value="Eraser" onclick="eraser()">
         <input id="clean" type="button" value="Clean" onclick="canvasClr()">
-        <!-- <i>Turn your drawing into a drag-and-drop image just in no time!</i> -->
       </div>
       <div id="paint">
         <canvas id="draw"></canvas>
@@ -38,6 +36,6 @@
       </div>
     </div>
   </section>
-  <footer class="centered">Made by <a id="footer-link" href=""><strong>Gary</strong></a></footer>
+  <footer class="centered">Made by <a id="footer-link" href="https://www.facebook.com/garyhsiao83"><strong>Gary</strong></a>.</footer>
   <script src="./js/script.js"></script>
 </body>
